Adiciona PWA e move cadastro.html para a raiz

--- a/cadastro.html
+++ b/cadastro.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <link rel="manifest" href="../manifest.json">
+   <meta name="theme-color" content="#2196f3">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cadastro</title>
-  <link rel="stylesheet" href="cadastro.css" />
+<link rel="stylesheet" href="cadastro/cadastro.css">
+
 </head>
 <body>
 
@@ -43,6 +47,15 @@
     <button type="submit">Cadastrar</button>
   </form>
 
-  <script src="cadastro.js"></script>
+  <script src="cadastro/cadastro.js"></script>
+
+  <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('../service-worker.js')
+      .then(() => console.log('Service Worker registrado com sucesso!'))
+      .catch(err => console.log('Erro ao registrar o Service Worker:', err));
+  }
+</script>
+
 </body>
 </html>
