--- a/consulta/consulta.html
+++ b/consulta/consulta.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Consultas Online</h1>
+    <h1>Consultas</h1>
     <p>Agende sua consulta com especialistas confiáveis</p>
   </header>
 
