--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cadastro</title>
 <link rel="stylesheet" href="cadastro/cadastro.css">
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#2196f3">
+
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(() => console.log("Service Worker registrado com sucesso"))
+      .catch(err => console.log("Falha ao registrar SW:", err));
+  }
+</script>
+
 
 </head>
 <body>
